crates/templates/tests/snapshots/intro_test__impl.snap
---
source: crates/templates/tests/intro_test.rs
expression: output
---
# This script was generated by rargc 0.0.0 (https://rargc.cloudbridge.uy)
# Modifying it manually is not recommended

if [[ "${BASH_VERSINFO:-0}" -lt 4 ]]; then
  printf "bash version 4 or higher is required\n" >&2
  exit 1
fi

